[project]
name = "pvz-miaodouzi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic>=2.11.0",
    "pypinyin>=0.55.0",
    "questionary @ git+https://github.com/mokurin000/questionary.git@feat/custom-search-fn",
]

[project.scripts]
pvzmdz-list-cards = "pvz_miaodouzi.show_cards:main"
pvzmdz-edit-save = "pvz_miaodouzi.edit_save:main"

[tool.uv]
package = true

[tool.setuptools.package-data]
pvz_miaodouzi = ["data/*.json"]

[dependency-groups]
dev = ["pyinstaller>=6.20.0"]
